# cv-server

./: .gitignore  Cargo.overrdie.toml  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.static-link  README.md  Rocket.toml  settings.toml
.github/workflows/: cv-deploy.yml  cv-static-link-deploy.yml
doc/api/cv/: cv.md  cv_gen.md
doc/api/template/: template.md
scripts/diesel/: diesel-cv-model.sh  diesel-cv-schema.sh  diesel-cv.toml
src/: main.rs
src/biz/cv/: cv_main_controller.rs  gen_controller.rs  mod.rs
src/biz/cv/edu/: edu_controller.rs  mod.rs
src/biz/cv/lang/: lang_controller.rs  mod.rs
src/biz/cv/project/: mod.rs  project_exp_controller.rs
src/biz/cv/skills/: mod.rs  skills_controller.rs
src/biz/cv/work/: mod.rs  work_exp_controller.rs
src/biz/template/: cv_template_controller.rs  mod.rs
src/common/: mod.rs
src/entry/: server.rs
src/model/: mod.rs
src/model/diesel/cv/: custom_cv_models.rs  cv_models.rs  cv_schema.rs  mod.rs
src/model/orm/cv/: cv_main_add.rs  mod.rs
src/model/request/cv/: gen_request.rs  mod.rs  render_result_request.rs
src/model/response/: mod.rs
src/model/response/cv/: cv_main_resp.rs  cv_section_resp.rs  mod.rs  section_content_resp.rs
src/model/response/cvgen/: cv_gen_resp.rs  mod.rs
src/service/: mod.rs
src/service/cv/: cv_main_service.rs  gen_service.rs  mod.rs
src/service/cv/edu/: edu_service.rs  mod.rs
src/service/cv/lang/: lang_service.rs  mod.rs
src/service/cv/project/: mod.rs  project_exp_service.rs
src/service/cv/skills/: mod.rs  (+1 more)
src/service/template/: template_service.rs
(+37 files in other folders)
