[package]
name = "cv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "^0.5.0-rc.2", features = ["json"]}
okapi = { git = "https://github.com/GREsau/okapi.git"}
schemars = "0.7"
rocket_okapi = { git = "https://github.com/GREsau/okapi.git", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.64", features = ["derive"] }
diesel = { version = "2.0.4", features = ["postgres","64-column-tables","chrono","serde_json"] }
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git", branch = "diesel2.0", features = ["model","common","rwconfig"]}
chrono = {version = "0.4",features = ["serde"]}